--- a/ProjektSpotify/Frontend/build.gradle
+++ b/ProjektSpotify/Frontend/build.gradle
@@ -19,6 +19,8 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis', version: '3.2.0'
+    implementation group: 'org.springframework.session', name: 'spring-session-data-redis', version: '3.2.0'
     testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.6.0'
     testImplementation 'org.seleniumhq.selenium:selenium-java:4.16.1'
 }
