--- a/ProjektSpotify/Frontend/src/main/resources/application.properties
+++ b/ProjektSpotify/Frontend/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+server.port=8082
+spring.session.store-type=redis
+spring.session.redis.save-mode=always
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
