--- a/ProjektSpotify/spotify-api-downloader/build.gradle
+++ b/ProjektSpotify/spotify-api-downloader/build.gradle
@@ -17,7 +17,10 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-rest'
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis', version: '3.2.0'
+    implementation group: 'org.springframework.session', name: 'spring-session-data-redis', version: '3.2.0'
+
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     runtimeOnly 'com.mysql:mysql-connector-j'
